--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <label>Filter Color:</label>
   <input id="color_name" placeholder="Enter the filter color here">
   <br><br>
+  <button onclick="filler_tint()" class="btn btn-warning">Apply filter</button>
+  <br><br>
   <button onclick="take_snapshot()" class="btn btn-success">Take Snapshot</button>
 </div>
 
